--- a/templates/about.html
+++ b/templates/about.html
@@ -11,19 +11,19 @@
     <link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.ico">
 
 	<!-- CSS here -->
-	<link rel="stylesheet" href="static/css/bootstrap.min.css">
-	<link rel="stylesheet" href="static/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="static/css/slicknav.css">
-    <link rel="stylesheet" href="static/css/flaticon.css">
-    <link rel="stylesheet" href="static/css/gijgo.css">
-    <link rel="stylesheet" href="static/css/animate.min.css">
-    <link rel="stylesheet" href="static/css/animated-headline.css">
-	<link rel="stylesheet" href="static/css/magnific-popup.css">
-	<link rel="stylesheet" href="static/css/fontawesome-all.min.css">
-	<link rel="stylesheet" href="static/css/themify-icons.css">
-	<link rel="stylesheet" href="static/css/slick.css">
-	<link rel="stylesheet" href="static/css/nice-select.css">
-	<link rel="stylesheet" href="static/css/style.css">
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/slicknav.css'%}">
+    <link rel="stylesheet" href="{% static 'css/flaticon.css'%}">
+    <link rel="stylesheet" href="{% static 'css/gijgo.css'%}">
+    <link rel="stylesheet" href="{% static 'css/animate.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/animated-headline.css'%}">
+    <link rel="stylesheet" href="{% static 'css/magnific-popup.css'%}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome-all.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/themify-icons.css'%}">
+    <link rel="stylesheet" href="{% static 'css/slick.css'%}">
+    <link rel="stylesheet" href="{% static 'css/nice-select.css'%}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <!-- ? Preloader Start -->
@@ -56,25 +56,34 @@
                                 <div class="main-menu f-right d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">About</a></li>
-                                            <li><a href="services.html">Services</a></li>
-                                            <li><a href="schedule.html">schedule</a></li>
-                                            <li><a href="gallery.html">gallery</a></li>
-                                            <li><a href="blog.html">Blog</a>
-                                                <ul class="submenu">
+                                            <li><a href="index">Home</a></li>
+                                            <li><a href="about">About</a></li>
+                                            <li><a href="services">Events</a></li>
+                                            <!-- <li><a href="schedule.html">schedule</a></li> -->
+                                            <li><a href="gallery">gallery</a></li>
+                                            <!-- <li><a href="blog.html">Blog</a> -->
+                                                <!-- <ul class="submenu">
                                                     <li><a href="blog.html">Blog</a></li>
                                                     <li><a href="blog_details.html">Blog Details</a></li>
                                                     <li><a href="elements.html">Element</a></li>
                                                 </ul>
-                                            </li>
-                                            <li><a href="contact.html">Contact</a></li>
+                                            </li> -->
+                                            <li><a href="contact">Contact</a></li>
+                                            {% if user.is_authenticated %}
+                                            <li>Hey, {{user.username}}</li>
+                                            <li><a href='logout'>Logout</a></li>
+                                            {%else%}
+                                            <li><a href='login'>Login</a></li>
+                                            {% endif %}
                                         </ul>
                                     </nav>
                                 </div>
+                                {% if user.is_authenticated %}
+                                {%else%}
                                 <div class="header-right-btn f-right d-none d-lg-block ml-30">
-                                    <a href="from.html" class="btn header-btn">became a member</a>
+                                    <a href="register" class="btn header-btn">Register Now</a>
                                 </div>
+                                {% endif %}
                             </div>
                         </div>   
                         <!-- Mobile Menu -->
