--- a/templates/index.html
+++ b/templates/index.html
@@ -56,11 +56,11 @@
                                 <div class="main-menu f-right d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">About</a></li>
-                                            <li><a href="services.html">Events</a></li>
+                                            <li><a href="index">Home</a></li>
+                                            <li><a href="about">About</a></li>
+                                            <li><a href="services">Events</a></li>
                                             <!-- <li><a href="schedule.html">schedule</a></li> -->
-                                            <li><a href="gallery.html">gallery</a></li>
+                                            <li><a href="gallery">gallery</a></li>
                                             <!-- <li><a href="blog.html">Blog</a> -->
                                                 <!-- <ul class="submenu">
                                                     <li><a href="blog.html">Blog</a></li>
