--- a/templates/paymentstatus.html
+++ b/templates/paymentstatus.html
@@ -12,9 +12,9 @@
         <div class="col my-4">
             <h2>Payment status regarding your booking </h2>
             {% if response.RESPCODE=='01' %}
-            SUCCESSFULL 
+            SUCCESSFUL
             {% else %}
-            ORDER FAILURE- WE WILL GET BACK TO YOUU SOON
+            ORDER FAILURE- WE WILL GET BACK TO YOU SOON
             {% endif %}
         </div>
     </div>
