--- a/templates/event.html
+++ b/templates/event.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="{% static 'css/themify-icons.css'%}">
     <link rel="stylesheet" href="{% static 'css/slick.css'%}">
     <link rel="stylesheet" href="{% static 'css/nice-select.css'%}"> -->
-    <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
 <body>
@@ -281,7 +281,7 @@
                 <li> <i class="fas fa-check"></i> food and drinks </li>
                 <li> <i class="fas fa-check"></i> invitation card </li>
             </ul>
-            <a href="#" class="btn">check out</a>
+            <a href="{{event.event_link}}" class="btn">check out</a>
         </div>
         {% endfor %}
 
