--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.ico">
 
 	<!-- CSS here -->
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
@@ -118,10 +118,10 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="box snake mb-30">
-                            <div class="gallery-img big-img" style="background-image: url(assets/img/gallery/gallery1.png);"></div>
+                            <div class="gallery-img big-img" style="background-image: url(/static/img/gallery/gallery1.png);"></div>
                             <div class="overlay">
                                 <div class="overlay-content">
-                                    <a href="gallery.html"><i class="ti-arrow-top-right"></i></a>
+                                    <a href="/event_gallery"><i class="ti-arrow-top-right"></i></a>
                                     <h3>Best fitness gallery</h3>
                                     <p>Fitness, Body</p>
                                 </div>
@@ -132,10 +132,10 @@
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="box snake mb-30">
-                                    <div class="gallery-img small-img" style="background-image: url(assets/img/gallery/gallery2.png);"></div>
+                                    <div class="gallery-img small-img" style="background-image: url(/static/img/gallery/gallery2.png);"></div>
                                     <div class="overlay">
                                         <div class="overlay-content">
-                                            <a href="gallery.html"><i class="ti-arrow-top-right"></i></a>
+                                            <a href="/event_gallery"><i class="ti-arrow-top-right"></i></a>
                                             <h3>Best fitness gallery</h3>
                                             <p>Fitness, Body</p>
                                         </div>
@@ -144,10 +144,10 @@
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="box snake mb-30">
-                                    <div class="gallery-img small-img" style="background-image: url(assets/img/gallery/gallery3.png);"></div>
+                                    <div class="gallery-img small-img" style="background-image: url(/static/img/gallery/gallery3.png);"></div>
                                     <div class="overlay">
                                         <div class="overlay-content">
-                                            <a href="gallery.html"><i class="ti-arrow-top-right"></i></a>
+                                            <a href="/event_gallery"><i class="ti-arrow-top-right"></i></a>
                                             <h3>Best fitness gallery</h3>
                                             <p>Fitness, Body</p>
                                         </div>
@@ -156,10 +156,10 @@
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="box snake mb-30">
-                                    <div class="gallery-img small-img" style="background-image: url(assets/img/gallery/gallery4.png);"></div>
+                                    <div class="gallery-img small-img" style="background-image: url(/static/img/gallery/gallery4.png);"></div>
                                     <div class="overlay">
                                         <div class="overlay-content">
-                                            <a href="gallery.html"><i class="ti-arrow-top-right"></i></a>
+                                            <a href="/event_gallery"><i class="ti-arrow-top-right"></i></a>
                                             <h3>Best fitness gallery</h3>
                                             <p>Fitness, Body</p>
                                         </div>
@@ -168,10 +168,10 @@
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="box snake mb-30">
-                                    <div class="gallery-img small-img" style="background-image: url(assets/img/gallery/gallery5.png);"></div>
+                                    <div class="gallery-img small-img" style="background-image: url(/static/img/gallery/gallery5.png);"></div>
                                     <div class="overlay">
                                         <div class="overlay-content">
-                                            <a href="gallery.html"><i class="ti-arrow-top-right"></i></a>
+                                            <a href="/events_gallery"><i class="ti-arrow-top-right"></i></a>
                                             <h3>Best fitness gallery</h3>
                                             <p>Fitness, Body</p>
                                         </div>
