--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,9 @@
                                             <li><a href="/">Home</a></li>
                                             <li><a href="about">About</a></li>
                                             <li><a href="event">Events</a></li>
+                                             {% if user.is_authenticated%}
+                                             <li> <li><a href="my_events">My_Events</a></li>
+                                             {% endif %}
                                             <!-- <li><a href="schedule.html">schedule</a></li> -->
                                             <li><a href="gallery">gallery</a></li>
                                             <!-- <li><a href="blog.html">Blog</a> -->
@@ -69,9 +72,20 @@
                                                 </ul>
                                             </li> -->
                                             <li><a href="contact">Contact</a></li>
-                                            {% if user.is_authenticated %}
+                                            {% comment %} {% if user.is_authenticated %}
                                             <li>Hey, {{user.username}}</li>
                                             <li><a href='logout'>Logout</a></li>
+                                            {%else%}
+                                            <li><a href='login'>Login</a></li>
+                                            {% endif %} {% endcomment %}
+                                            {% if user.is_authenticated and user.is_staff %}
+                                            <li><a>Hey, {{user.username}}</a></li>
+                                            <li><a href="admin">Admin portal</a></li>
+                                            <li><a href='logout'>Logout</a></li>
+                                            {%elif user.is_authenticated%}
+                                            <li>Hey, {{user.username}}</li>
+                                            <li><a href='logout'>Logout</a></li>
+
                                             {%else%}
                                             <li><a href='login'>Login</a></li>
                                             {% endif %}
